Anonymous | Login | 2021-01-15 21:42 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031369 | Open CASCADE | [OCCT] OCCT:Foundation Classes | public | 2020-02-12 16:08 | 2020-12-02 17:12 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031369: Foundation Classes, Standard_ReadBuffer - access violation on second ::ReadChunk() call after read failure | ||||||||
Description | Access violation happens on reading attached glTF model. | ||||||||
Steps To Reproduce | pload XDE VISUALIZATION ReadGltf D bath-city-north-gltfpack.glb Output: An exception was caught 000001DE3385CD90 : Standard_ProgramError: OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000002 during 'READ' operation | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | ![]() | ||||||||
![]() |
||||||
|
![]() |
|
(0093693) git (administrator) 2020-08-28 14:22 |
Branch CR31369 has been created by kgv. SHA-1: 42844560fa758b81e9a6f0174327d20119afae6c Detailed log of new commits: Author: kgv Date: Fri Aug 28 14:24:40 2020 +0300 0031369: Foundation Classes, Standard_ReadBuffer - access violation on second ::ReadChunk() call after read failure Standard_ReadBuffer::readRawDataChunk() - do not increment NULL pointer and return invalid address. |
(0093704) kgv (developer) 2020-08-28 16:28 |
Patch is ready for review - OCCT branch: CR31369 http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31369-master-KGV/ [^] |
(0093710) osa (developer) 2020-08-28 17:28 |
The patch was reviewed |
(0093731) bugmaster (administrator) 2020-08-30 11:01 |
Combination - OCCT branch : IR-2020-08-28 master SHA - 68a23293059aefbc5feeb43dbbe92e728944f170 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-08-28 SHA - 231cf318a348ade96332c8dca2b8aa3ffa18d6cf was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17249.00000000021 / 17322.48000000014 [-0.42%] Products Total CPU difference: 12007.590000000067 / 11882.730000000085 [+1.05%] Windows-64-VC14: OCCT Total CPU difference: 18729.984375 / 18716.078125 [+0.07%] Products Total CPU difference: 13222.90625 / 13242.09375 [-0.14%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0094099) git (administrator) 2020-09-05 12:35 |
Branch CR31369 has been deleted by inv. SHA-1: 42844560fa758b81e9a6f0174327d20119afae6c |
![]() |
|||
occt: master 68a23293
Timestamp: 2020-08-28 11:24:40 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031369: Foundation Classes, Standard_ReadBuffer - access violation on second ::ReadChunk() call after read failure Standard_ReadBuffer::readRawDataChunk() - do not increment NULL pointer and return invalid address. |
||
mod - src/Standard/Standard_ReadBuffer.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-02-12 16:08 | kgv | New Issue | |
2020-02-12 16:08 | kgv | Assigned To | => kgv |
2020-02-12 16:08 | kgv | File Added: bath-city-north-gltfpack.7z | |
2020-02-12 16:08 | kgv | Relationship added | child of 0030691 |
2020-08-28 14:18 | kgv | Category | OCCT:Data Exchange => OCCT:Foundation Classes |
2020-08-28 14:18 | kgv | Summary | Data Exchange, RWGltf_CafReader - access violation on reading attached glTF model => Standard_ReadBuffer::ReadChunk() - access violation on second call after read failure |
2020-08-28 14:18 | kgv | Summary | Standard_ReadBuffer::ReadChunk() - access violation on second call after read failure => Foundation Classes, Standard_ReadBuffer::ReadChunk() - access violation on second call after read failure |
2020-08-28 14:19 | kgv | Summary | Foundation Classes, Standard_ReadBuffer::ReadChunk() - access violation on second call after read failure => Foundation Classes, Standard_ReadBuffer - access violation on second ::ReadChunk() call after read failure |
2020-08-28 14:22 | git | Note Added: 0093693 | |
2020-08-28 16:28 | kgv | Note Added: 0093704 | |
2020-08-28 16:28 | kgv | Assigned To | kgv => osa |
2020-08-28 16:28 | kgv | Status | new => resolved |
2020-08-28 16:28 | kgv | Relationship added | child of 0030692 |
2020-08-28 16:28 | kgv | Relationship deleted | child of 0030691 |
2020-08-28 17:28 | osa | Note Added: 0093710 | |
2020-08-28 17:28 | osa | Assigned To | osa => bugmaster |
2020-08-28 17:28 | osa | Status | resolved => reviewed |
2020-08-28 17:32 | kgv | Steps to Reproduce Updated | View Revisions |
2020-08-30 11:01 | bugmaster | Note Added: 0093731 | |
2020-08-30 11:01 | bugmaster | Status | reviewed => tested |
2020-08-30 11:14 | bugmaster | Test case number | => Not required |
2020-08-30 11:33 | bugmaster | Changeset attached | => occt master 68a23293 |
2020-08-30 11:33 | bugmaster | Status | tested => verified |
2020-08-30 11:33 | bugmaster | Resolution | open => fixed |
2020-09-05 12:35 | git | Note Added: 0094099 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |