0031369: Foundation Classes, Standard_ReadBuffer - access violation on second ::ReadChunk() call after read failure

Standard_ReadBuffer::readRawDataChunk() - do not increment NULL pointer and return invalid address.